--- a/Verify/Captcha.html
+++ b/Verify/Captcha.html
@@ -1,4 +1,4 @@
-<html>
+<html class="lightmode">
   <head>
     <style>
       .popbox_container .content-header {
@@ -30,6 +30,7 @@
         padding: .5em 1em;
         margin-top: 40px;
         float: right;
+        border-color: transparent;
       }
       .popbox .spacer {
         padding-top: 20px;
@@ -59,6 +60,9 @@
         margin-right:auto;
         background:#fff;
         max-width:400px;
+      }
+      html.darkmode .popbox_container {
+        background:#000;
       }
     </style>
     <script>
